ingress/ingress-admin.yaml
# ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ginflix-admin-ingress
  namespace: ginflix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/custom-headers: "ginflix/security-headers"
spec:
  ingressClassName: nginx
  rules:
    - host: ginflix10.gin-telecom.ovh
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
