ingress/ingress-ginflix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ginflix-ingress
  namespace: ginflix
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20000m"
    nginx.ingress.kubernetes.io/custom-headers: "ginflix/security-headers"
spec:
  ingressClassName: nginx
  rules:
  - host: ginflix10.gin-telecom.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80

      - path: /stream
        pathType: Prefix
        backend:
          service:
            name: streamer
            port:
              number: 80
